# buddha-site

./: .gitignore  1_粵語版.py  README.md  data.py  pyproject.toml  utils.py
.streamlit/: config.toml
pages/: 2_华语版.py
